2004-02-19  Dom Lachowicz <cinamod@hotmail.com>

	* Makefile.am: disable vector text path code for the 2.6 release

2004-02-18  Brian Koebbe  <brian@koebbe.org>

	* rsvg-css.c (rsvg_css_parse_list): fix a loop run amuck (#134801)

2004-02-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* rsvg-gz.c: (rsvg_handle_gz_close_impl):
	  catch read error from gsf_input_read
          break from infinite loops that do not manage to write (#134653)

2004-02-16  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Fix bug #134492
	
2004-02-15  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in, rsvg-styles.c: Fix bug #134292
	
2004-02-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Fix bug #133947
	
2004-01-31  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.*: Hopefully fix bug #113538
	
2004-01-29  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: bug #132569

2004-01-15  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c:
	* test-rsvg.c: Fix bug #131644
	
2004-01-12  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c: Fix bug #124075
	
2004-01-06  Dom Lachowicz <cinamod@hotmail.com>

	* Makefile.am: Fix bug #130687
	
2004-01-05  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-text.c:
	* rsvg-text-vectors.c: Factor out bitmap vs. vector text routines
	
2004-01-04  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-text-vectors.c: Start of work toward representing text as 
	vector paths. Mad props go to the boys @ the Gimp for pointing me in
	the right direction here (bug #107668).
	
2003-12-13  Caleb Moore <calebmm@tpg.com.au>

	* rsvg-bpath-util.c: Fixed double move bug in path

2003-12-10  Federico Mena Quintero  <federico@ximian.com>

	* rsvg-defs.c: #include <glib/gmessages.h>

2003-12-09  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-defs.c (rsvg_defs_set): Bug 128690
	
2003-12-07  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number
	
2003-12-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: