@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: librsvg
+Description: library that renders svg files using libart and pango
+Version: @VERSION@
+Requires: glib-2.0 gdk-pixbuf-2.0 libart-2.0 libxml-2.0 pangoft2 @LIBGSFPKG@ @LIBCROCOPKG@
+Libs: ${pc_top_builddir}/${pcfiledir}/librsvg-2.la
+Cflags: -I${pc_top_builddir}/${pcfiledir}
