@@ -1,3 +1,8 @@
+2004-03-04  Glynn Foster  <glynn.foster@sun.com>
+
+	* Makefile.am, configure.in, librsvg-2.0-uninstalled.pc.in:
+	Add uninstalled pkg-config file.
+
 2004-02-19  Dom Lachowicz <cinamod@hotmail.com>
 
 	* Makefile.am: disable vector text path code for the 2.6 release
